syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";


option csharp_namespace = "Products.Grpc";

package products;

service ProductsService {
    rpc AddProduct (AddProductRequest) returns (AddProductResponse);
    rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);
    rpc ChangeProductPrice (ChangePriceRequest) returns (ChangePriceResponse);
    rpc GetProduct (GetProductRequest) returns (GetProductResponse);
    rpc GetProductsBySeller (GetProductsBySellerRequest) returns (GetProductsBySellerResponse);
    rpc GetProductsByCategory (GetProductsByCategoryRequest) returns (GetProductsByCategoryResponse);
    rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
    rpc DeleteOrder (DeleteOrderRequest) returns (DeleteOrderResponse);
    rpc GetCategories (GetCategoriesRequest) returns (GetCategoriesResponse);
    rpc GetUserOrders (GetUserOrdersRequest) returns (GetUserOrdersResponse);
}

message GetUserOrdersRequest {
    int32 userID = 1;
}

message GetUserOrdersResponse {
    repeated GrpcOrder orders = 1;
}

message GrpcOrder {
    int32 ID = 1;
    int32 userID = 2;
    repeated GrpcOrderItem orderItems = 3;
    google.protobuf.Timestamp createdAt = 4;
}

message GetCategoriesRequest {}

message GetCategoriesResponse {
    repeated GrpcCategory categories = 1;
}

message GrpcCategory {
    int32 ID = 1;
    string name = 2;
}

message GetProductsByCategoryResponse {
    repeated GrpcProduct products = 1;
    int32 count = 2;
}

message GetProductsByCategoryRequest {
    int32 categoryID = 1;
    int32 offset = 2;
    int32 count = 3;
}

message DeleteOrderResponse {
    bool deleted = 1;
}

message DeleteOrderRequest {
    int32 orderID = 1;
}

message CreateOrderResponse {
    bool created = 1;
}

message CreateOrderRequest {
    repeated GrpcOrderItem orderItems = 2;
}

message GrpcOrderItem {
    int32 productID = 1;
    int32 quantity = 2;
}

message GetProductsBySellerRequest {
    int32 sellerID = 1;
    int32 offset = 2;
    int32 count = 3;
}

message GetProductsBySellerResponse {
    repeated GrpcProduct products = 1;
    int32 total = 2;
    int32 count = 3;
}

message GrpcSeller {
    int32 ID = 1;
    string username = 2;
    string email = 3;
}

message GrpcProduct {
    int32 ID = 1;
    string title = 2;
    string description = 3;
    int32 sellerID = 4;
    GrpcSeller seller = 5;
    float price = 6;
    int32 categoryID = 7;
    GrpcCategory category = 8;
    google.protobuf.Timestamp createdAt = 9;
    google.protobuf.Timestamp updatedAt = 10;
}

message GetProductRequest {
    int32 productID = 1;
}

message GetProductResponse {
    GrpcProduct product = 1;
}

message ChangePriceRequest {
    int32 productID = 1;
    float newPrice = 2;
}

message ChangePriceResponse {
    bool priceChanged = 1;
    float newPrice = 2;
    float oldPrice = 3;
}

message AddProductRequest {
    string title = 1;
    string description = 2;
    float price = 3;
    int32 categoryID = 4;
    string base64Photo = 5;
}

message AddProductResponse {
    bool isAdded = 1;
    int32 productID = 2;
}

message DeleteProductRequest {
    int32 productID = 1;
}

message DeleteProductResponse {
    bool isDeleted = 1;
}